--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -244,7 +244,7 @@
             <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
               data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">
-                <a routerLink="/white-label-betting-platform">White label Sportsbook</a>
+                <a routerLink="/white-label-betting-platform">White label exchange</a>
               </div>
               <div class="accordion-body">
                 <a routerLink="/casino">White label Casino</a>
