--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -12,7 +12,7 @@
         <div class="nav_col_1">
           <ul class="nav_col_2">
             <li routerLink="/white-label-betting-platform">
-              <a href="#"> WHITE LABEL SPORTSBOOK </a>
+              <a href="#"> WHITE LABEL EXCHANGE </a>
             </li>
 
             <li>
@@ -83,7 +83,7 @@
                   aria-controls="flush-collapseOne"
                   routerLink="/white-label-betting-platform"
                 >
-                  <a href="#"> WHITE LABEL SPORTSBOOK </a>
+                  <a href="#"> WHITE LABEL EXCHANGE</a>
                 </button>
               </h2>
             </div>
