--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -66,7 +66,7 @@
             <div class="use_list_1" id="panel_1">
             <li  (click)="animation1()"><a href=""> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
            <li><a routerLink="/sports-betting-software/mobile-betting-software">Mobile betting</a></li>
-        <li> <a routerLink="/sportsbook-iframe">Sportsbook IFrame </a></li>
+        <li> <a routerLink="/sportsbook-iframe">Exchangebook IFrame </a></li>
             <li><a routerLink="/sports-betting-software/esports-betting-software">eSports betting</a></li>
             </div>
         </ul>
@@ -85,7 +85,7 @@
           </ul>
           </div>
 
-          
+<!--           
         <div class="next_back">
 
         
@@ -98,7 +98,7 @@
               <li><a routerLink="/decentralized-sports-betting">Decentralized Sports betting</a></li>
               </div>
           </ul>
-          </div>
+          </div> -->
 
 
           <div class="next_back">
