--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -11,7 +11,7 @@
       <li><a  class="navbar-link" href="#">Sports betting software <i class="fa-solid fa-angle-down"></i></a>
         <ul id="submenu" >
            <li><a routerLink="/sports-betting-software/mobile-betting-software">Mobile betting</a></li>
-           <li><a routerLink="/sportsbook-iframe">Sportsbook iFrame   <i class="fa-solid fa-angle-down"></i></a>
+           <li><a routerLink="/sportsbook-iframe">Exchangebook iFrame   <i class="fa-solid fa-angle-down"></i></a>
                 <ul id="menu_2">
                     <li><a routerLink="/"> Sport betting widget</a></li>
                 </ul>
