--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -40,7 +40,7 @@
               <div class="sub_menu">
                 <ul>
                   <li><a routerLink="/about-us"> About</a></li>
-                  <li><a routerLink="/"> Sportsbook software provider</a></li>
+                  <li><a routerLink="/"> Exchange software provider</a></li>
                   <li><a routerLink="/contact">Contact Us</a></li>
                 </ul>
               </div>
@@ -144,7 +144,7 @@
                   <a routerLink="/about-us">About</a>
                 </div>
                 <div class="accordion-body">
-                  <a routerLink="/">Sportsbook software provider</a>
+                  <a routerLink="/">Exchange software provider</a>
                 </div>
 
                 <div class="accordion-body">
