--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -84,7 +84,7 @@
 
     <div class="contact-section1-para">
     <p style="margin-bottom:20px ;"> <strong style="color: #000;">
-      Vrnl is a well-established Sportsbook and Gaming Provider with a remarkable 10-year track record in the gambling industry.
+      Vrnl is a well-established Sportsbook and Gaming Provider with a remarkable 10-year track record in the betting industry.
     </strong>
     Since 2012, we have been dedicated to supplying bookmakers, lotteries, and betting organizations in regulated markets.
   </p>
