--- a/src/styles.css
+++ b/src/styles.css
@@ -13409,3 +13409,10 @@ list-style: none;
 body{
     top:0px !important;
 }
+
+
+.iti {
+    position: relative !important;
+    display: block !important;
+}
+
