--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -134,7 +134,7 @@
                     <p class="text">Dragon Tiger</p>
                 </div>
                 <div class="col_2">
-                        <p class="text_5_main"> <strong>Bingo</strong> </p>
+                        <p class="text_5_main"> Bingo</p>
                 </div>         
             </div>
             
