--- a/src/app/casino-games/casino-games.component.html
+++ b/src/app/casino-games/casino-games.component.html
@@ -9,7 +9,7 @@
             <h1 class="left-index3-h1">The world's most extensive  catalogue of 
             <b style="font-family: 'Raleway', sans-serif; font-size: 40px; font-weight: bold;">Online Casino games</b></h1>
 
-            <p class="left-text-index3-paras"> Our <b style="color: #575756;"> White Label </b> is your ultimate destination, providing you with an unmatched assortment of over 3000 thrilling casino games and slots. We pride ourselves on offering the most comprehensive range of online casino games available on the internet.<br><br></p>
+            <p class="left-text-index3-paras"> Our <b style="color: #575756;"> White Label </b> is your ultimate destination, providing you with an unmatched assortment of over 3000+ thrilling casino games and slots. We pride ourselves on offering the most comprehensive range of online casino games available on the internet.<br><br></p>
 
             <p class="left-text-index3-bold" ><b>We cater to online gaming operators, bookmakers, lotteries, and betting organizations operating in regulated markets.  </b> <br><br></p>
 
