--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -60,7 +60,7 @@
         <img src="assets/vrnl_17.webp" alt="software platform"/>
       </div>
 <div class="col2-text">
-        <h1 class="col2-head">Casino Software Main features<br /></h1>
+        <h1 class="col2-head">Casino Software Main Features<br /></h1>
         <p class="casino_whites_sec_p">
           Our <strong>casino software platform</strong>  is designed to provide a seamless and immersive gaming experience for both players and operators.<br /><br />
         </p>
@@ -74,7 +74,7 @@
             Reporting mechanism and notification system that gives operators
             immediate access and alerts to operational notifications
           </li>
-          <li>API for Business intelligence BI</li>
+          <li>API for Business Intelligence BI</li>
           <li>Marketing tools</li>
           <li>API for external integration</li>
         </ol>
