--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -517,7 +517,7 @@ The proper management of a eSports betting platform can make this business highl
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingt21">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse21" aria-expanded="true" aria-controls="collapse21">
-                          How many football matches can I promote?
+                          How many cricket matches can I promote?
                         </button>
                       </h2>
                       <div id="collapse21" class="accordion-collapse collapse" aria-labelledby="heading21" data-bs-parent="#accordionExampleStreaming">
