--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,7 +20,7 @@
                     <div class="sub_menu_2">
                       <ul>
                         <li>
-                          <a routerLink="/sportsbook-iframe">Exchangebook iframe</a>
+                          <a routerLink="/exchangebook-iframe">Exchangebook iframe</a>
                         </li>
                       </ul>
                     </div>
@@ -91,7 +91,7 @@
                
                   <li><a routerLink="/about-us" aria-label="About">About us</a></li>
                   <li>
-                    <a routerLink="/online-sportsbook-software">Online Exchange software</a>
+                    <a routerLink="/online-exchangebook-software">Online Exchange software</a>
                   </li>
                
                 </ul>
@@ -173,7 +173,7 @@
                 <a routerLink="/sports-betting-software">sports betting software</a>
               </div>
               <div class="accordion-body">
-                <a routerLink="/sportsbook-iframe">Exchangebook iframe</a>
+                <a routerLink="/exchangebook-iframe">Exchangebook iframe</a>
               </div>
               <div class="accordion-body">
                 <a routerLink="/sports-betting-software/esports-betting-software">eSports betting</a>
@@ -264,7 +264,7 @@
                 <a routerLink="/about-us" aria-label="About">About Us</a>
               </div>
               <div class="accordion-body">
-                <a routerLink="/online-sportsbook-software">Online Exchange Software</a>
+                <a routerLink="/online-exchangebook-software">Online Exchange Software</a>
               </div>
             </div>
           </div>
