--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -51,7 +51,7 @@
             href="#/about-us">About</a></p>
       </div>
       <div>
-        <p class="comp_list"><a routerLink="/online-exchangebook-software" aria-label="sportsbook Provider">Exchangebook Provider</a>
+        <p class="comp_list"><a routerLink="/online-exchangebook-software" aria-label="sportsbook Provider">Online Exchange Software</a>
         </p>
       </div>
       <div>
