--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -53,7 +53,7 @@
                       <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                           <p>
-                            Sports Betting Software is designed based on the user’s markets and selections. Moreover, our experts are always available to deliver the best customer service to you anything, relating to learning your necessities and the market prerequisites. Likewise, we deal with every step of the development process, rendering to you a total and performing Sportsbook Platform.
+                            Sports Betting Software is designed based on the user’s markets and selections. Moreover, our experts are always available to deliver the best customer service to you anything, relating to learning your necessities and the market prerequisites. Likewise, we deal with every step of the development process, rendering to you a total and performing exchange Platform.
                           </p>
                         </div>
                       </div>
@@ -246,7 +246,7 @@ Online player, register your game account online or at a shop, place bets.
                       <div id="collapseFourteen" class="accordion-collapse collapse" aria-labelledby="headingFourteen" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                           <p>
-                            If you already manage a sportsbook and you would like to switch to our sports betting platform, we will make sure that everything is properly managed, we will prepare a migration plan. The players’ personal data will be uploaded into the new platform and the switch will be planned in order to complete the migration in a few hours.
+                            If you already manage a exchangebook and you would like to switch to our sports betting platform, we will make sure that everything is properly managed, we will prepare a migration plan. The players’ personal data will be uploaded into the new platform and the switch will be planned in order to complete the migration in a few hours.
                            </p>
 
                         </div>
@@ -276,7 +276,7 @@ Online player, register your game account online or at a shop, place bets.
                       <div id="collapseSixteen" class="accordion-collapse collapse" aria-labelledby="headingSixteen" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                           <p>
-                            If you already manage a sportsbook and you would like to switch to our sports betting platform, we will make sure that everything is properly managed, we will prepare a migration plan. The players’ personal data will be uploaded into the new platform and the switch will be planned in order to complete the migration in a few hours.
+                            If you already manage a exchangebook and you would like to switch to our sports betting platform, we will make sure that everything is properly managed, we will prepare a migration plan. The players’ personal data will be uploaded into the new platform and the switch will be planned in order to complete the migration in a few hours.
                            </p>
 
                         </div>
@@ -465,7 +465,7 @@ The proper management of a eSports betting platform can make this business highl
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="heading8">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8" aria-expanded="false" aria-controls="collapse8">
-                          Can I host the eSport sportsbook on my server infrastructure?                      </button>
+                          Can I host the eSport exchange on my server infrastructure?                      </button>
                       </h2>
                       <div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading8" data-bs-parent="#accordionesport">
                         <div class="accordion-body">
