--- a/src/app/main-sec/main-sec.component.css
+++ b/src/app/main-sec/main-sec.component.css
@@ -110,11 +110,11 @@
     }
     
     
-.platform_row{
+/* .platform_row{
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 .platform_header {
     font-size: 43px;
     width: 93%;
@@ -200,11 +200,11 @@ border-color: #000;
   }
 
   @media (max-width:820px){
-    .platform_row{
+    /* .platform_row{
         display: flex;
       flex-direction: column;
       gap: 0px !important;
-    }
+    } */
 .main_sec{
     margin-top: 90px;
 }
@@ -237,12 +237,12 @@ border-color: #000;
     display: none;
 }
   }
-.whites_row{
+/* .whites_row{
     display: flex;
     justify-content: center;
     align-items: center;
 
-}
+} */
 .white_header{
     font-size: 34px;
     width: 92%;
@@ -289,11 +289,11 @@ border-radius: 5px;
 }
 
 @media (max-width:820px){
-    .whites_row{
+    /* .whites_row{
         display: flex;
       flex-direction: column;
       gap: 30px;
-    }
+    } */
     .whites_col {
         width: 94%;
     }
@@ -316,11 +316,11 @@ border-radius: 5px;
     }
     
   }
-.gaming_row{
+/* .gaming_row{
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 .gaming_sec{
     padding-top: 93PX;
     margin-bottom: 80px;
@@ -346,11 +346,11 @@ border-radius: 5px;
     font-weight: 350;
 }
 @media (max-width:820px){
-    .gaming_row{
+    /* .gaming_row{
         
         display: flex;
       flex-direction: column;
-    }
+    } */
     .gaming_img{
 display: none;
     }
@@ -372,18 +372,18 @@ display: none;
     padding-top: 80px;
     margin-bottom: 80px;
 }
-.casino_row{
+/* .casino_row{
     display: flex;
     justify-content: center;
 gap:30px;
-}
+} */
 
-.casino_header{
+/* .casino_header{
     font-size: 35px;
     color: #a0c528;
     margin-bottom: 29px;
     font-weight: 600;
-}
+} */
 .casino_para{
     width: 97%;
     font-size: 16px;
@@ -411,10 +411,10 @@ gap:30px;
 }
 
 @media (max-width:820px){
-    .casino_row{
+    /* .casino_row{
         display: flex;
       flex-direction: column;
-    }
+    } */
     .casino_col {
         display: none;
     }
@@ -428,10 +428,10 @@ gap:30px;
     padding-top: 80px;
 }
 
-.live_casino_row{
+/* .live_casino_row{
     display: flex;
     justify-content: center;
-}
+} */
 
 .live_header{
     width: 82%;
@@ -461,10 +461,10 @@ gap:30px;
 }
 
 @media (max-width:820px){
-    .live_casino_row{
+    /* .live_casino_row{
         display: flex;
       flex-direction: column;
-    }
+    } */
     .live_col {
 
         display: none;
@@ -610,11 +610,11 @@ height: 330px;
 .integration_sec{
     padding-top: 80px;
 }
-.integration_row{
+/* .integration_row{
     align-items: center;
     display: flex;
     justify-content: center;
-}
+} */
 
 .integration_col{
     width: 44%;
@@ -622,12 +622,7 @@ height: 330px;
 .integration_col_1{
     width: 40%;
 }
-.integration_header{
-    color: #a0c528;
-    font-weight: 600;
-    margin-bottom: 35px;
-    font-size: 34px;
-}
+
 .integration_header_1{
     font-size: 30px;
     font-weight: 600;
@@ -647,10 +642,10 @@ font-weight: 600;
 }
 
 @media (max-width:820px){
-    .integration_row{
+    /* .integration_row{
         display: flex;
       flex-direction: column;
-    }
+    } */
     .integration_col {
         display: none;
     }
@@ -658,9 +653,7 @@ font-weight: 600;
         width: 97%;
         margin-left: 12px;
     }
-    .integration_header {
-        font-size: 26px;
-    }
+  
     .integration_header_1 {
         font-size: 26px;
     }
