--- a/src/app/whitelabel/whitelabel.component.css
+++ b/src/app/whitelabel/whitelabel.component.css
@@ -135,9 +135,9 @@ p{font-size: 20px;line-height: 1.7;}
         line-height: 0;
         margin-bottom: 51px;}
 .sec-header{
-        font-size: 20px;
+        font-size: 18px;
         line-height: 0px;
-        font-weight: 570;
+        /* font-weight: 570; */
         margin-bottom: 34px;}
 .niva-separator1{
         margin-left: 15px;}
