--- a/src/styles.css
+++ b/src/styles.css
@@ -2674,10 +2674,10 @@ cursor: pointer;
     flex-direction: column;
     padding: 0px !important;
   }
-  .container7-col2-content {
+  /* .container7-col2-content {
     margin: 0px 0px 0px 0px !important;
     padding: 0px 49px 30px 19px !important;
-  }
+  } */
   .container7-col2 {
     padding: 0px 0px 0px 0px !important;
   }
