--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -754,4 +754,9 @@ flex-wrap: wrap;
       left: 75%;
       top: 35%;
   }
+  .content-2{
+    padding-bottom: 23px;
+    padding-top: 23px;
+    padding: 0px;
+  }
   }
