--- a/src/app/sportbet/sportbet.component.css
+++ b/src/app/sportbet/sportbet.component.css
@@ -290,7 +290,7 @@ height: 93%;
 .sportsbetting-betting-software-main {
   display: flex;
   font-family: Poppins;
-  margin-top: 166px;
+  /* margin-top: 166px; */
   justify-content: center;
 
 }
