--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -36,14 +36,20 @@
 <div class="container_row">
 
 <div class="container_col">
-<ul>
+<ul style="list-style: none;">
+
 <li class="theme_header"><h2 class="theme_header" >B2B (Business 2 Business)</h2></li>
-   <P>our B2B theme is distinguished by its unique features. We've incorporated an additional Parley option for an enriched betting experience.our theme is characterized by the finest color combinations and design elements, ensuring an aesthetically pleasing interface.users are granted permissions to place bets on a wide range of sports including cricket, soccer, and tennis. We also have many different casino games for more entertainment options. Additionally, we feature various types of casinos, such as the AWC Casino, which hosts an impressive collection of over 500 slot games and more than 100 table games.</P>
+<li class="disc"> <P>our B2B theme is distinguished by its unique features. We've incorporated an additional Parley option for an enriched betting experience.
+  <li class="disc"><p>our theme is characterized by the finest color combinations and design elements, ensuring an aesthetically pleasing interface.users are granted permissions to place bets on a wide range of sports including cricket, soccer, and tennis.</p></li> <li class="disc">
+    <p>We also have many different casino games for more entertainment options. Additionally, we feature various types of casinos, such as the AWC Casino, which hosts an impressive collection of over 500 slot games and more than 100 table games.</p>
+  </li></P></li>
+  
   <li class="theme_header"><h2 class="theme_header" >B2C (Business 2 Customer)</h2></li>
-<p>Our B2C site offers a user-friendly experience for our customers. They can easily register using their phone number, providing a convenient and secure way to create an account.</p>
-<p>Once registered, users have the option to deposit funds into their accounts, making it simple to get started with betting and gaming. Additionally, we provide a seamless withdrawal process, ensuring that users can access their winnings effortlessly.</p>
-<p>To enhance the experience, we offer bonus points that users can earn and use during their time on the platform. This adds an extra layer of excitement and value for our clients, allowing them to make the most of their deposits and withdrawals.</p>
-<p>Overall, our B2C site is designed to provide a hassle-free and enjoyable betting and gaming experience, giving our customers the freedom to play, deposit, and withdraw with ease.</p>
+  <li class="disc"><p>Our B2C site offers a user-friendly experience for our customers. They can easily register using their phone number, providing a convenient and secure way to create an account.</p></li>
+<li class="disc"><p>Once registered, users have the option to deposit funds into their accounts, making it simple to get started with betting and gaming. Additionally, we provide a seamless withdrawal process, ensuring that users can access their winnings effortlessly.</p></li>
+<li class="disc"><p>To enhance the experience, we offer bonus points that users can earn and use during their time on the platform. This adds an extra layer of excitement and value for our clients, allowing them to make the most of their deposits and withdrawals.</p></li>
+<li class="disc"><p>Overall, our B2C site is designed to provide a hassle-free and enjoyable betting and gaming experience, giving our customers the freedom to play, deposit, and withdraw with ease.</p></li>
+
  </ul>
 </div>
 <div class="container ">
