--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -138,11 +138,11 @@
 
           <!-- <========country number end============> -->
 
-          <div class="email_label">
+          <div class="email_label ">
             <label for="phone"><b>Phone Number</b></label>
           </div>
          
-          <div class="email_input">
+          <div class="email_input emails_pad">
             <input
             formControlName="number"
               value=""
@@ -152,6 +152,7 @@
               required
               maxlength="10"
               placeholder="000-000-0000"
+            
              
             />
           </div>
