--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -236,7 +236,7 @@ We take pride in presenting our clients with the widest selection of games withi
                   </a>
 
                   <a href="https://www.neyaludis.live/#/dash"  target="_blank">
-                    <img src="assets/partner-logo-new/9wickets.svg" alt="9wickets" class="img-fluid partner-image copy">
+                    <img src="assets/logo-wckt9.webp" alt="9wickets" class="img-fluid partner-image copy">
                   </a>
 
                   <a href="https://www.mpk.live/#/dash" target="_blank">
@@ -321,7 +321,7 @@ We take pride in presenting our clients with the widest selection of games withi
                   </a>
 
                   <a class="box" href="https://www.neyaludis.live/#/dash"  target="_blank">
-                    <img src="assets/partner-logo-new/9wickets.svg" alt="9wickets" class="img-fluid partner-image copy">
+                    <img src="assets/logo-wckt9.webp" alt="9wickets" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box"  href="https://www.rajbet.win/#/dash" target="_blank">
