--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -144,7 +144,11 @@
           </div>
           <div class="web_page_col_1">
            <h1 class="web3_header_2"> Online Casino</h1> 
+           <p class="new-containt">Are you ready to elevate your online casino experience to the next level? Look no further! Vrnl is your one-stop solution for all your online casino needs. We provide top-tier services and cutting-edge solutions for online casino operators, ensuring an unforgettable gaming experience for your players.
+
+           </p>
            <ul class="user_data_section">
+           
             <li>Providers 75 + more than</li>
             <li>Slot machine 15,000 + more than</li>
             <li>Table games 500 + more than</li>
