--- a/src/app/online-sportsbook/online-sportsbook.component.css
+++ b/src/app/online-sportsbook/online-sportsbook.component.css
@@ -165,3 +165,9 @@ b, strong {
   .sports_para {
     font-size: 36px;
   }
+  .new-containt{
+    line-height: 30px;
+    font-weight: 350;
+    color: #686868;
+    font-size: 16px;
+  }
