--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -164,6 +164,7 @@
       
           <div class="crypto-section6-left">
              <h2>Lottery and Bingo Games</h2>
+             <P class="new-containt">At VRNL, we bring the excitement of Lottery and Bingo games to both your screen and your local retail stores. Whether you're a fan of traditional paper tickets or prefer the convenience of playing online, we've got you covered. With us, it's not just about games; it's about the thrill of winning and the joy of playing.</P>
              <ul class="user_data_section">
               <li>Bingo 80 + more than</li>
                 <li>Lottery 130 + more than</li>
