--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -171,7 +171,7 @@
              </ul>
           </div>
       <div class="crypto-section6-right">
-          <h2>Lottery and Bingo games online and retails</h2>
+          <h2>Ultimate Destination for Online and Retail Lottery and Bingo Games</h2>
           <img class="lottery_img" src="assets/bingo vrnl 13.webp" alt="Lottery and Bingo Games">
           </div>
         </div>
