--- a/src/app/online-sportsbook/online-sportsbook.component.css
+++ b/src/app/online-sportsbook/online-sportsbook.component.css
@@ -85,8 +85,8 @@
 
 }
 .sports_changes {
-    padding-top: 133px;
-    padding-left: 70px;
+    padding-top: 80px;
+    /* padding-left: 70px; */
 }
 
 b, strong {
