--- a/src/app/online-sportsbook/online-sportsbook.component.css
+++ b/src/app/online-sportsbook/online-sportsbook.component.css
@@ -1,173 +1,1 @@
-.hover-1_1{
-    color: #0a0a0a;
-    border-radius: 0px;
-    padding: 15px 20px;
-    font-weight: 600;
-    font-size: 14px;
-    letter-spacing: 1px;
-    cursor: pointer;
-    box-shadow: inset 0 0 0 0 #a0c528;
-    transition: ease-out 0.9s;
-    background-color: #fff;
-    height: 50px;
-   
-}
-.slide_right:hover {
-    box-shadow: inset 400px 0 0 0 #a0c528;
-    border-color: #a0c528;
-    color: #fff;
-}
-.button_slide{
-    color: #000000;
-    border-radius: 0px;
-    padding: 15px 20px;
-    font-weight: 600;
-    font-size: 14px;
-    letter-spacing: 1px;
-    cursor: pointer;
-    box-shadow: inset 0 0 0 0 #a0c528;
-    transition: ease-out 0.9s;
-    background-color: #ffffff;
-    height: 50px;
-    font-weight: bold;
-}
-
-.web_images{
-
-   height: 400px;
-}
-
-.live_sec5_imgs{
-    width: 793px; 
-    height: 370px;
-}
-.web_3_imag{
-    width: 768px; 
-    height: 640px;  
-}
-
-.lottery_img{
-    width: 781px; 
-    height: 323px; 
-    margin-left: 75px;
-}
-
-@media screen and (max-width: 820px){
-
-    .wpb_wrapper{
-        padding-left: 30px !important;
-        padding-right: 30px !important;
-       
-    }
-    .web_images{
-        width: 100% !important; 
-        height: auto !important;
-     }
-     
-     .live_sec5_imgs{
-        width: 100% !important; 
-        height: auto !important;
-     }
-     .web_3_imag{
-        width: 100% !important; 
-        height: auto !important;
-     }
-     
-     .lottery_img{
-        width: 100% !important; 
-        height: auto !important;
-     }
-     
-     .kohli_images{
-        width: 100% !important; 
-        height: auto !important;
-     }
-
-}
-.sports_changes {
-    padding-top: 80px;
-    /* padding-left: 70px; */
-}
-
-b, strong {
-    font-weight: bold;
-}
-
-.features_col{
-    margin-top: 100px;
-}
-
-.features_col_1{
-    width: 735px;
-
-}
-
-.wpb_wrapper{
-    padding-left: 98px;
-    padding-right: 98px;
-    width: 100%;
-    font-family: Poppins;
-    line-height: 30px;
-    font-weight: 350;
-    color: #686868;
-    font-size: 16px;
-}
-
-.crypto-section5-container{
-    margin-left: -33px;
-}
-
-.onther_a{
-    font-size: 15px !important;
-  }
-
-  @media(max-width:756px){
-    .features_col_1 {
-        width: 345px;
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-
-    .crypto-section5-left {
-      
-        margin-left: 34px;
-    }
-
-    .live_sec5_imgs {
-        width: 95% !important;
-        height: auto !important;
-        margin-left: 34px;
-    }
-    .crypto-section5-right h2 {
-        margin-left: 42px;
-        width: 343px;
-    }
-
-    .crypto-section6-left {
-       
-        margin-left: -5px;
-    }
-  }
-
-  @media only screen and (min-device-width: 768px) and (max-device-width: 1024px){
-
-  .fearues_row {
-    flex-direction: inherit;
-}
-
-  }
-  .lc247{
-    color: #a0c528;
-  }
-  .lc247:hover{
-    color: #000000;
-  }
-  .sports_para {
-    font-size: 36px;
-  }
-  .new-containt{
-    line-height: 30px;
-    font-weight: 350;
-    color: #686868;
-    font-size: 16px;
-  }
+.button_slide,.hover-1_1{border-radius:0;padding:15px 20px;font-size:14px;letter-spacing:1px;cursor:pointer;box-shadow:inset 0 0 0 0 #a0c528;transition:.9s ease-out;background-color:#fff;height:50px}.hover-1_1{color:#0a0a0a;font-weight:600}.button_slide,b,strong{font-weight:700}.slide_right:hover{box-shadow:inset 400px 0 0 0 #a0c528;border-color:#a0c528;color:#fff}.button_slide{color:#000}.new-containt,.wpb_wrapper{line-height:30px;font-weight:350}.web_images{height:400px}.live_sec5_imgs{width:793px;height:370px}.web_3_imag{width:768px;height:640px}.lottery_img{width:781px;height:323px;margin-left:75px}@media screen and (max-width:820px){.wpb_wrapper{padding-left:30px!important;padding-right:30px!important}.kohli_images,.live_sec5_imgs,.lottery_img,.web_3_imag,.web_images{width:100%!important;height:auto!important}}.sports_changes{padding-top:80px}.features_col{margin-top:100px}.features_col_1{width:735px}.wpb_wrapper{padding-left:98px;padding-right:98px;width:100%;font-family:Poppins;color:#686868;font-size:16px}.crypto-section5-container{margin-left:-33px}.onther_a{font-size:15px!important}@media(max-width:756px){.crypto-section5-left,.live_sec5_imgs{margin-left:34px}.features_col_1{width:345px;padding-left:20px;padding-right:20px}.live_sec5_imgs{width:95%!important;height:auto!important}.crypto-section5-right h2{margin-left:42px;width:343px}.crypto-section6-left{margin-left:-5px}}@media only screen and (min-device-width:768px) and (max-device-width:1024px){.fearues_row{flex-direction:inherit}}.lc247{color:#a0c528}.lc247:hover{color:#000}.sports_para{font-size:36px}.new-containt{color:#686868;font-size:16px}
