--- a/src/app/footers2/footers2.component.css
+++ b/src/app/footers2/footers2.component.css
@@ -1,247 +1,1 @@
-
-.footer_row{
-    display: flex;
-    justify-content: center;
-}
-
-.footer_sec_2{
-    padding-top: 116px;
-}
-.footer_col{
-    width: 18%;
-}
-
-.footer_col_1{
-    width: 18%;
-}
-.footer_col_2{
-    width: 18%;
-}
-.footer_row{
-    margin-left: 99px;
- }
-.footer_col_3{
-    width: 18%;
-}
-.footer_para{
-    margin-top: 30px;
-    font-size: 15px;
-}
-
-.social_row{
-    display: flex;
-    justify-content: center;
-    gap: 5%;
-}
-.social_card{
-    width: 54px;
-    height: 54px;
-    background: rgb(255, 255, 255);
-    border-radius: 50%;
-    cursor: pointer;
-}
-.social_card_1{
-    width: 54px;
-    height: 54px;
-    background: rgb(255, 255, 255);
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.social_card_2{
-    width: 54px;
-    height: 54px;
-    background: rgb(255, 255, 255);
-    border-radius: 50%;
-    cursor: pointer;
-}
-.social_card_3{
-    width: 54px;
-    height: 54px;
-    background: rgb(255, 255, 255);
-    border-radius: 50%;
-    cursor: pointer;
-}
-.social_card_4{
-    width: 54px;
-    height: 54px;
-    background: rgb(255, 255, 255);
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-
-.social_sec{
-    padding: 50px 0;
-}
-.card_container{
-    text-align: center;
-    padding: 14px
-}
-
-.social_card:hover{
-   background-color: #3b5998;
-   color: #fff;
-}
-
-.social_card_1:hover{
-   background-color: #00abf0; 
-   color: #fff;
-
-}
-.social_card_2:hover{
-    background-color: #1a81ad;
-    color: #fff;
-
-}
-
-.social_card_3:hover{
-
-background-color: rgb(255, 0, 0);
-color: #fff;
-
-}
-
-.social_card_4:hover{
-
-background: radial-gradient(circle farthest-corner at 35% 90%, #fec564, transparent 50%), radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%), radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent), linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);
-color: #fff;
-
-}
-
-.footer_para_1{
-    padding: 12px;
-    font-size: 13px;
-    margin-top: 40px;
-    text-align: center;
-    letter-spacing: 1px;
-    opacity: 1;
-    color: #333;
-    line-height: 1.3;
-    font-family: "Raleway",sans-serif;
-}
-.footer_para_2{
-    font-size: 13px;
-    text-align: center;
-    letter-spacing: 1px;
-    opacity: 1;
-    color: #333;
-    line-height: 1.3;
-    font-family: "Raleway",sans-serif;
-}
-@media screen and (max-width: 820px){
-
-    .container9 {
-       
-        display: flex;
-        flex-direction: column;
-        padding: 0px 20px 0px 20px;
-        margin-top: 39%;
-        
-    }
-    .left-text-index3 {
-        width: 83%;
-    }
-    .left-index3-h1 {
-       
-        margin-right: calc(1.001em * -1);
-    }
-    
-    .left-text-index3 h2 {
-        
-        margin-right: calc(0.001em * -1);
-        
-    }
-    
-    
-    .footer_row{
-        margin-left: 0px;
-     }
-    
-    .right-img-index3 img {
-        margin-top: 8%;
-        margin-left: 0;
-        width: 339px;
-    
-    }
-    
-    .card3{
-        width: 114%;
-    }
-    
-    .text-cont1 {
-        margin-left: 59px;
-    }
-    
-    .text-cont2 {
-        margin-left: 60px;
-    }
-    
-    .text-cont3 {
-        margin-left: 66px;
-    }
-    
-    .text-cont4 {
-        margin-left: 103px;
-    }
-    .text-cont5 {
-        margin-left: 40px;
-    }
-    
-    
-    /* ============================================== */
-    
-    
-    
-    
-    .index3-main-div {
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .index3-right-text {
-        width: 92%;
-        padding: 0px 20px 0px 20px;
-    }
-    .index3-left-img img{
-        width: 86%;
-    }
-    .footer_row{
-    display: flex;
-   justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap:48px
-    }
-    .footer_para {
-        font-size: 10px !important;
-        text-align: center;
-    }
-    .social_row {
-        display: flex;
-        justify-content: center;
-        gap: 2%;
-    }
-    }
-    .comp_1{
-        width: 88px;
-    }
-    @media (max-width: 768px){
-    
-        .footer_row{
-            flex-direction: column;
-            gap:48px
-        }
-        .footer_row{
-            margin-left: 0px;
-         }
-    
-    }
-    @media (max-width: 280px){
-        .comp_1 {
-            width: 63px;
-        }
-        .footer_row{
-            margin-left:0px;
-         }
-    }
+.footer_row{display:flex;justify-content:center;margin-left:99px}.footer_sec_2{padding-top:116px}.footer_col,.footer_col_1,.footer_col_2,.footer_col_3{width:18%}.footer_para{margin-top:30px;font-size:15px}.footer_para_1,.footer_para_2{font-size:13px;text-align:center;letter-spacing:1px;opacity:1;color:#333;line-height:1.3;font-family:Raleway,sans-serif}.social_row{display:flex;justify-content:center;gap:5%}.social_card,.social_card_1,.social_card_2,.social_card_3,.social_card_4{width:54px;height:54px;background:#fff;border-radius:50%;cursor:pointer}.social_sec{padding:50px 0}.card_container{text-align:center;padding:14px}.social_card:hover{background-color:#3b5998;color:#fff}.social_card_1:hover{background-color:#00abf0;color:#fff}.social_card_2:hover{background-color:#1a81ad;color:#fff}.social_card_3:hover{background-color:red;color:#fff}.social_card_4:hover{background:radial-gradient(circle farthest-corner at 35% 90%,#fec564,transparent 50%),radial-gradient(circle farthest-corner at 0 140%,#fec564,transparent 50%),radial-gradient(ellipse farthest-corner at 0 -25%,#5258cf,transparent 50%),radial-gradient(ellipse farthest-corner at 20% -50%,#5258cf,transparent 50%),radial-gradient(ellipse farthest-corner at 100% 0,#893dc2,transparent 50%),radial-gradient(ellipse farthest-corner at 60% -20%,#893dc2,transparent 50%),radial-gradient(ellipse farthest-corner at 100% 100%,#d9317a,transparent),linear-gradient(#6559ca,#bc318f 30%,#e33f5f 50%,#f77638 70%,#fec66d 100%);color:#fff}.footer_para_1{padding:12px;margin-top:40px}@media screen and (max-width:820px){.container9{display:flex;flex-direction:column;padding:0 20px;margin-top:39%}.left-text-index3{width:83%}.left-index3-h1{margin-right:calc(1.001em * -1)}.left-text-index3 h2{margin-right:calc(.001em * -1)}.footer_row{margin-left:0}.right-img-index3 img{margin-top:8%;margin-left:0;width:339px}.card3{width:114%}.text-cont1{margin-left:59px}.text-cont2{margin-left:60px}.text-cont3{margin-left:66px}.text-cont4{margin-left:103px}.text-cont5{margin-left:40px}.index3-main-div{display:flex;flex-direction:column}.index3-right-text{width:92%;padding:0 20px}.index3-left-img img{width:86%}.footer_row{display:flex;justify-content:center;align-items:center;flex-direction:column;gap:48px}.footer_para{font-size:10px!important;text-align:center}.social_row{display:flex;justify-content:center;gap:2%}}.comp_1{width:88px}@media (max-width:768px){.footer_row{flex-direction:column;gap:48px;margin-left:0}}@media (max-width:280px){.comp_1{width:63px}.footer_row{margin-left:0}}
