--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,137 +1,1 @@
-
-/*=========== <  company and solution section  >=========== */
-.company_about{
-    margin-left: 118px;
-}
-.comp_row{
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-}
-.comp_details{
-    display: flex;
-    justify-content: center;
-    gap:63px;
-}
-.comp_sol{
-    padding-top: 80px;
-    padding-bottom: 80px;
-}
-.comp_header{
-    font-weight: 600;
-    font-size: 24px;
-    margin-bottom: 25px;
-}
-.comp_list{
-font-size: 16px;
-color:  #a0c528;
-margin-bottom: 3px;
-cursor: pointer;
-line-height: 20px;
-font-weight: 350;
-
-}
-
-.comp_list a{
-    text-decoration: none;
-}
-
-.comp_list:hover{
-    color: #000;
-
-}
-.company_about p a{
-color: #a0c528;
-font-weight: 350;
-}
-.company_about p a:hover{
-    color: #000;
-}
-.comp_row .comp_col a img{
-    margin-left: 60px;
-}
-@media (max-width:820px){
-   
-    .comp_details {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 21px;
-    }
-    .about_left{
-        margin-left: 54px
-    }
-    .comp_1{
-margin-left: -11px;
-    }
-    .comp_2{
-        margin-left: 48pxx;
-        width: 125px;
-    }
-    .comp_3{
-        margin-left: 71px;
-
-    }
-    
-    
-.com {
-    margin-left: 7px !important;
-}
-.seconcomp_row{
-    margin-left: -35px;
-}
-}
-.footer_sec{
-background-color: #0a0a0a;
-width: 100%;
-height: 80px;
-}
-
-.footer_para p{
-text-align: center;
-font-size: 15px;
-}
-.footer_para p a{
-  color: #a0c528;
-    }
-    .footer_para p a:hover{
-        color: #fff;
-        text-decoration: none;
-          }
-.footer_para{
-    padding-top: 24px;
-}
-.prepaid_head{
-color: #a0c528;
-    font-size: 74px;
-}
-.prepaid_para{
-    font-size: 18px;
-}
-.company_about a{
-text-decoration: none;
-}
-.secondcomp_col_1{
-    
-    margin-left: 80px;
-}
-
-
-
-.vrnl-net{
-color: #a0c528;
-}
-.vrnl-net:hover{
-    color: white;
-    }
-@media (max-width: 768px){
-    .com {
-        margin-left: 0px  !important;
-        margin-top: 31px;
-}
-.seconcomp_row{
-    margin-left: -35px;
-}
-}
-
+.company_about{margin-left:118px}.comp_row{display:flex;flex-direction:column;gap:30px}.comp_details{display:flex;justify-content:center;gap:63px}.comp_sol{padding-top:80px;padding-bottom:80px}.comp_header{font-weight:600;font-size:24px;margin-bottom:25px}.comp_list,.company_about p a{font-weight:350;color:#a0c528}.comp_list{font-size:16px;margin-bottom:3px;cursor:pointer;line-height:20px}.comp_list a,.company_about a{text-decoration:none}.comp_list:hover,.company_about p a:hover{color:#000}.comp_row .comp_col a img{margin-left:60px}@media (max-width:820px){.comp_details{display:flex;flex-direction:column;justify-content:center;align-items:center;gap:21px}.about_left{margin-left:54px}.comp_1{margin-left:-11px}.comp_2{margin-left:48pxx;width:125px}.comp_3{margin-left:71px}.com{margin-left:7px!important}.seconcomp_row{margin-left:-35px}}.footer_sec{background-color:#0a0a0a;width:100%;height:80px}.footer_para p{text-align:center;font-size:15px}.footer_para p a,.vrnl-net{color:#a0c528}.footer_para p a:hover{color:#fff;text-decoration:none}.footer_para{padding-top:24px}.prepaid_head{color:#a0c528;font-size:74px}.prepaid_para{font-size:18px}.secondcomp_col_1{margin-left:80px}.vrnl-net:hover{color:#fff}@media (max-width:768px){.com{margin-left:0!important;margin-top:31px}.seconcomp_row{margin-left:-35px}}
