--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,452 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
-
-* {
-  margin: 0px;
-  padding: 0px;
-}
-.nav_row {
-  display: flex;
-  justify-content: space-around;
-  padding-top: 37px;
-}
-.nav_row_2 {
-  display: flex;
-}
-
-nav {
-  height: 96px;
-  background-color: #fff;
-  color: #000;
-  font-size: 18px;
-}
-.nav_row_2 a {
-  text-decoration: none;
-  list-style: none;
-  margin: 11px;
-  position: relative;
-  color: #000;
-  list-style: none;
-  margin-top: 1px;
-}
-.nav_row_2 li {
-  list-style: none;
-}
-a {
-  text-decoration: none;
-}
-.nav_row_2 li a {
-  color: #000;
-  padding-bottom: 21px !important;
-font-family: "Poppins";
-  font-size: 16px;
-  cursor: pointer;
-}
-
-
-.nav_row_2 li:hover .sub_menu {
-  display: block;
-  position: absolute;
-  margin-top: 15px;
-  background-color: #a0c528;
-  width: 250px;
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
-}
-.sub_menu li a {
-  color: white;
-  margin-left: 18px !important;
-  font-size: 14px;
-  font-family: "Poppins";
-}
-.nav_row_2 li:hover .sub_menu ul {
-  display: block;
-  margin: 10px;
-}
-.nav_row_2 li:hover .sub_menu ul li {
-  padding: 8px;
-}
-.sub_menu ul li {
-  color: white;
-  font-size: 15px;
-  margin-left: -5px;
-}
-
-.nav_row_2 a:after {
-  content: "";
-  background-color: #a0c528;
-  height: 3px;
-  width: 0;
-  position: absolute;
-  left: 3px;
-  bottom: 9px;
-  transition: 0.3s;
-}
-.nav_row_2 a:hover:after {
-  width: 100%;
-  color: #a0c528;
-}
-
-.act:hover {
-  color: #a0c528;
-}
-.sub_menu li a::before {
-  content: "";
-  background-color: #fff;
-  position: absolute;
-  top: 8px;
-  width: 10px;
-  height: 3px;
-  left: -2px;
-  opacity: 0;
-}
-
-.sub_menu li a:hover::before {
-  transition: all 0.2s ease;
-  left: 10px;
-  opacity: 1;
-}
-.sub_menu li a:hover {
-  position: relative;
-  padding-left: 23px !important;
-  -webkit-transition: all 0.2s ease;
-  -moz-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
-
-.sub_menu .list::before {
-  content: "";
-  background-color: #fff;
-  position: absolute;
-  top: 16px;
-  width: 10px;
-  height: 3px;
-  left: -2px;
-  opacity: 0;
-}
-
-.sub_menu .list:hover::before {
-  transition: all 0.2s ease;
-  left: 10px;
-  opacity: 1;
-}
-.sub_menu .list:hover {
-  position: relative;
-  padding-left: 30px !important;
-  -webkit-transition: all 0.2s ease;
-  -moz-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
-
-.sub_menu_2 {
-  display: none;
-}
-.hover_me:hover .sub_menu_2 {
-  display: block;
-  position: absolute;
-  left: 95%;
-  top: 0;
-  background: #a0c528;
-  width: 250px;
-}
-.sub_menu_3 {
-  display: none;
-}
-.hover_me:hover .sub_menu_3 {
-  display: block;
-  position: absolute;
-  left: 95%;
-  top: 23%;
-  background: #a0c528;
-  width: 250px;
-}
-
-.sub_menu_4 {
-  display: none;
-}
-.hover_me:hover .sub_menu_4 {
-  display: block;
-  position: absolute;
-  left: 95%;
-  top: 44%;
-  background: #a0c528;
-  width: 250px;
-}
-header {
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: position 10s;
-  -ms-transition: position 10s;
-  -o-transition: position 10s;
-  transition: all 0.5s ease;
-}
-
-@keyframes smoothScroll {
-  0% {
-    transform: translateY(-40px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
-}
-
-.page-header {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 1;
-}
-.page-header.is-sticky {
-  position: fixed;
-  animation: smoothScroll 1s forwards;
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
-  z-index: 9999;
-}
-
-.sub_menu {
-  display: none;
-}
-
-.nav_col {
-  width: 13%;
-}
-.nav_col_2 {
-  width: 63%;
-}
-.nav_col_3 {
-  width: 13% !important;
-}
-.nav_col_3 i {
-  margin: 4px;
-}
-
-.responsive {
-  display: none;
-}
-
-.navigation {
-  background-color: #a0c528 !important;
-}
-
-.accordion-flush .accordion-item .accordion-button,
-.accordion-flush .accordion-item .accordion-button.collapsed {
-  border-radius: 0;
-  background-color: #a0c528 !important;
-  color: white;
-  padding: 14px;
-  font-size: 13px;
-  font-family: Poppins;
-}
-.accordion-body {
-  padding: var(--bs-accordion-body-padding-y) var(--bs-accordion-body-padding-x);
-  background-color: #a0c528;
-  color: white;
-  font-size: 13px;
-  font-family: Poppins;
-  padding-left: 25px;
-}
-
-.container,
-.container-fluid,
-.container-lg,
-.container-md,
-.container-sm,
-.container-xl,
-.container-xxl {
-padding: 0;
-}
-
-.navbar-collapse {
-  flex-basis: 100%;
-  flex-grow: 1;
-  align-items: center;
-}
-
-.accordion-button:focus {
-  z-index: 3;
-  border-color: var(--bs-accordion-btn-focus-border-color);
-  outline: 0;
-  box-shadow: var(--bs-accordion-btn-focus-box-shadow) none !important;
-}
-.accordion-button1::after {
-  flex-shrink: 0;
-  width: var(--bs-accordion-btn-icon-width);
-  height: var(--bs-accordion-btn-icon-width);
-  margin-left: auto;
-  content: "";
-  background-image: var(--bs-accordion-btn-icon);
-  background-repeat: no-repeat;
-  background-size: var(--bs-accordion-btn-icon-width);
-  transition: var(--bs-accordion-btn-icon-transition);
-}
-.accord_btn {
-  background: #a0c528;
-  padding: 8px;
-  font-size: 13px;
-  width: 100%;
-  text-align: start;
-  border: none;
-  color: white;
-  padding-left: 14px;
-  height: 42px;
-}
-@media (max-width: 820px) {
-  .normal_view {
-    display: none !important;
-  }
-
-  .responsive {
-    display: block;
-  }
-  nav {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    background: none !important;
-  }
-  .nav_col img {
-    max-width: 28%;
-  
-  }
-  .navbar-toggler-icon {
-    margin-right: 44px !important;
-  }
-
-  .nav_col {
-    width: 59%;
-    margin: 25px 0 !important;
-  }
-}
-.accordion-body a {
-  color: white;
-}
-.accord_btn a {
-  color: white;
-  font-size: 13px;
-  font-family: Poppins;
-}
-.act:hover {
-  color: #a0c528 !important;
-}
-
-.nav_row_2 .current_page_item a :after {
-  content: "";
-  background-color: #a0c528;
-  height: 3px;
-  width: 0;
-  position: absolute;
-  left: 3px;
-  bottom: 9px;
-  transition: 0.3s;
-}
-
-.nav_row_2 .current_page_item a:hover:after {
-  width: 100%;
-  color: #a0c528;
-}
-.menubar {
-  border: none !important;
-}
-.navbar-toggler {
-  border: none;
-}
-.navbar-toggler:hover {
-  background: none;
-  border: none;
-}
-
-@media (max-width: 800px) {
-  .navbar-toggler-icon {
-    
-    font-size: 16px;
-  }
- 
-  }
-
-.vrnl_logo {
-  width: 134px;
-  height: 53px;
-}
-
-@media (min-width: 1200px) {
-  .nav_col img {
- max-width: 100%;
-    margin-left: -13px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .nav_col img {
-  max-width: 50%;
-    margin-left: 20px;
-  }
-}
-
-.navbar-toggler:focus {
-  box-shadow: none;
-}
-
-.casino {
-  animation: color-text-keyframes 1.2s linear infinite;
-}
-@keyframes color-text-keyframes {
-  0% {
-    color: red;
-  }
-  33.3% {
-    color: #ecba00;
-  }
-  66.6% {
-    color: #ff7d00;
-  }
-  to {
-    color: #9b0a16;
-  }
-}
-.VIpgJd-ZVi9od-l4eHX-hSRGPd{
-  display: none !important;
-}
-.nav_col img{
-  margin-top: -8px;
-}
-
-.fa-facebook-f:hover{
-  color: #1877F2;
-}
-
-.fa-telegram:hover{
-  color: #0088cc;
-}
-
-.fa-twitter:hover{
-color:#00acee
-}
-
-.fa-whatsapp:hover{
-  color: #25D366 ;
-}
-
-.fa-skype:hover{
-  color: #00aff0 ;
-}
-
-.fa-instagram:hover{
-  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-  -webkit-background-clip: text;
-          background-clip: text;
-  -webkit-text-fill-color: transparent;
-  
-  }
-
-
-  @media only screen and (max-width: 1024px) and (min-width: 950px){
-
-    .nav_row_2 a{
-      margin: 1px 4px !important;
-    }
-
-    .nav_col_2 {
-      width: 71% !important;
-    }
-    .nav_col_3{
-      width: 14% !important;
-    }
-  }
-
- 
+@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap);.nav_row,.nav_row_2{display:flex}.nav_row_2 a,.nav_row_2 li{list-style:none}.nav_row_2 a,a{text-decoration:none}.sub_menu .list::before,.sub_menu li a::before{background-color:#fff;position:absolute;width:10px;height:3px;left:-2px;opacity:0;content:""}*{margin:0;padding:0}.nav_row{justify-content:space-around;padding-top:37px}nav{height:96px;background-color:#fff;color:#000;font-size:18px}.nav_row_2 a{margin:1px 11px 11px;position:relative;color:#000}.nav_row_2 li a{color:#000;padding-bottom:21px!important;font-family:Poppins;font-size:16px;cursor:pointer}.nav_row_2 li:hover .sub_menu{display:block;position:absolute;margin-top:15px;background-color:#a0c528;width:250px;box-shadow:0 1px 3px 0 rgba(0,0,0,.1)}.sub_menu li a{color:#fff;margin-left:18px!important;font-size:14px;font-family:Poppins}.nav_row_2 li:hover .sub_menu ul{display:block;margin:10px}.nav_row_2 li:hover .sub_menu ul li{padding:8px}.sub_menu ul li{color:#fff;font-size:15px;margin-left:-5px}.nav_row_2 .current_page_item a :after,.nav_row_2 a:after{content:"";background-color:#a0c528;height:3px;width:0;position:absolute;left:3px;bottom:9px;transition:.3s}.nav_row_2 .current_page_item a:hover:after,.nav_row_2 a:hover:after{width:100%;color:#a0c528}.sub_menu li a::before{top:8px}.sub_menu .list:hover::before,.sub_menu li a:hover::before{transition:.2s;left:10px;opacity:1}.sub_menu li a:hover{position:relative;padding-left:23px!important;-webkit-transition:.2s;-moz-transition:.2s;transition:.2s}.sub_menu .list::before{top:16px}.hover_me:hover .sub_menu_2,.hover_me:hover .sub_menu_3,.hover_me:hover .sub_menu_4{display:block;left:95%;background:#a0c528;width:250px}.sub_menu .list:hover{position:relative;padding-left:30px!important;-webkit-transition:.2s;-moz-transition:.2s;transition:.2s}.responsive,.sub_menu,.sub_menu_2,.sub_menu_3,.sub_menu_4{display:none}.hover_me:hover .sub_menu_2{position:absolute;top:0}.hover_me:hover .sub_menu_3{position:absolute;top:23%}.hover_me:hover .sub_menu_4{position:absolute;top:44%}header{-webkit-transition:.5s;-moz-transition:position 10s;-ms-transition:position 10s;-o-transition:position 10s;transition:.5s}@keyframes smoothScroll{0%{transform:translateY(-40px)}100%{transform:translateY(0)}}.page-header{position:absolute;top:0;right:0;left:0;z-index:1}.page-header.is-sticky{position:fixed;animation:1s forwards smoothScroll;box-shadow:0 1px 3px 0 rgba(0,0,0,.1);z-index:9999}.nav_col{width:13%}.nav_col_2{width:63%}.nav_col_3{width:13%!important}.nav_col_3 i{margin:4px}.navigation{background-color:#a0c528!important}.accordion-flush .accordion-item .accordion-button,.accordion-flush .accordion-item .accordion-button.collapsed{border-radius:0;background-color:#a0c528!important;color:#fff;padding:14px;font-size:13px;font-family:Poppins}.accordion-body{padding:var(--bs-accordion-body-padding-y) var(--bs-accordion-body-padding-x);background-color:#a0c528;color:#fff;font-size:13px;font-family:Poppins;padding-left:25px}.container,.container-fluid,.container-lg,.container-md,.container-sm,.container-xl,.container-xxl{padding:0}.navbar-collapse{flex-basis:100%;flex-grow:1;align-items:center}.accordion-button:focus{z-index:3;border-color:var(--bs-accordion-btn-focus-border-color);outline:0;box-shadow:var(--bs-accordion-btn-focus-box-shadow) none!important}.accordion-button1::after{flex-shrink:0;width:var(--bs-accordion-btn-icon-width);height:var(--bs-accordion-btn-icon-width);margin-left:auto;content:"";background-image:var(--bs-accordion-btn-icon);background-repeat:no-repeat;background-size:var(--bs-accordion-btn-icon-width);transition:var(--bs-accordion-btn-icon-transition)}.accord_btn{background:#a0c528;padding:8px 8px 8px 14px;font-size:13px;width:100%;text-align:start;border:none;color:#fff;height:42px}@media (max-width:820px){.normal_view{display:none!important}.responsive{display:block}nav{border-bottom:1px solid rgba(0,0,0,.1);background:0 0!important}.nav_col img{max-width:28%}.navbar-toggler-icon{margin-right:44px!important}.nav_col{width:59%;margin:25px 0!important}}.accordion-body a{color:#fff}.accord_btn a{color:#fff;font-size:13px;font-family:Poppins}.act:hover{color:#a0c528!important}.menubar{border:none!important}.navbar-toggler{border:none}.navbar-toggler:hover{background:0 0;border:none}@media (max-width:800px){.navbar-toggler-icon{font-size:16px}}.vrnl_logo{width:134px;height:53px}@media (min-width:1200px){.nav_col img{max-width:100%;margin-left:-13px}}@media screen and (max-width:767px){.nav_col img{max-width:50%;margin-left:20px}}.navbar-toggler:focus{box-shadow:none}.casino{animation:1.2s linear infinite color-text-keyframes}@keyframes color-text-keyframes{0%{color:red}33.3%{color:#ecba00}66.6%{color:#ff7d00}to{color:#9b0a16}}.VIpgJd-ZVi9od-l4eHX-hSRGPd{display:none!important}.nav_col img{margin-top:-8px}.fa-facebook-f:hover{color:#1877f2}.fa-telegram:hover{color:#08c}.fa-twitter:hover{color:#00acee}.fa-whatsapp:hover{color:#25d366}.fa-skype:hover{color:#00aff0}.fa-instagram:hover{background:radial-gradient(circle at 30% 107%,#fdf497 0,#fdf497 5%,#fd5949 45%,#d6249f 60%,#285aeb 90%);-webkit-background-clip:text;background-clip:text;-webkit-text-fill-color:transparent}@media only screen and (max-width:1024px) and (min-width:950px){.nav_row_2 a{margin:1px 4px!important}.nav_col_2{width:71%!important}.nav_col_3{width:14%!important}}
