--- a/src/app/i-frame/i-frame.component.css
+++ b/src/app/i-frame/i-frame.component.css
@@ -1,424 +1,1 @@
-.iframe_images{
-    width: 580px;
-    height: 295px;
-}
-
-.managed_images{
-    width: 524px;
-    height: 507px;
-}
-
-.button_slide {
-border-color: black;
-}
-@media screen and (max-width: 820px){
-    .iframe_images{
-        width: 100% !important;
-        height: auto !important;
-    }
-    
-    .managed_images{
-        width: 100% !important;
-        height: auto !important;
-    }
-
-    .gaming_row_iframe {
-        display: flex;
-        flex-direction: column;
-}
-.sport_sol_row{
-    display: flex;
-    flex-direction: column;  
-}
-.types_images{
-display: none;
-}
-.gaming_img_iframe{
-    display: none;
-
-}
-
-.gaming_col_2_iframe {
-    width: 100% !important;
-    padding: 12px;
-}
-.gaming_header_iframe{
-    font-size: 27px !important;
-   
-    font-weight: 600 !important;
-}
-.sports_col_iframe {
-    width: 100% !important;
-    padding: 12px !important;
-}
-.i-frame_img1{
-display: none;
-}
-.sport_sol_col_1{
-width: 99% !important;
-padding: 12px;
-}
-.header_iframes{
-font-size: 27px !important;
-font-weight: 600 !important;
-}
-/* .sport_iframe_sec {
-    margin-top: 80px !important;
-
-} */
-}
-.gaming_sec_iframe {
-    padding-top: 63PX;
-    margin-bottom: 80px;
-}
-
-.gaming_row_iframe {
-    display: flex;
-    justify-content: center;
-    gap: 2%;
-}
-
-.gaming_col_2_iframe{
-    width: 40%;
-}
-.gaming_img_iframe{
-    width: 540px;
-height:370px; 
-}
-
-.gaming_col_iframe{
-    width: 43%;
-}
-
-.gaming_header_iframe{
-   font-size: 35px;
-    color: #a0c528;
-    line-height: 45px;
-    text-align: left;
-    margin-bottom: 37px;
-   
-    font-weight: bold;
-}
-.gaming_para_iframe{
-    font-family: Poppins;
-    line-height: 30px;
-   
-  font-weight: 300;
-    font-size: 16px;
-    color: black;
-}
-
-.sport_sol_row{
-    display: flex;
-    justify-content: center;
-    gap:4%;
-}
-.i-frame_img1{
-    width: 555px;
-    height: 451px;
-}
-
-.sports_iframes{
-    margin-top: 64px;
-    margin-bottom: 64px;
-}
-.sport_sol_col_1{
-  width: 45%;  
-}
-.header_iframes{
-    font-size: 35px;
-    color: #a0c528;
-    line-height: 45px;
-    text-align: left;
-    margin-bottom: 30px !important;
-    font-family: Poppins;
-    font-weight: 600;
-}
-
-strong{
-    font-weight: bold;
-}
-
-.sports_col_1_iframe{
-
-}
-.sports_col_iframe{
-width: 41%;
-}
-.types_sports_sec_iframe{
-    padding-top: 11px;
-}
-.m73-7.x-section {
-    padding-top: 45px;
-    padding-bottom: 45px;
-}
-.m73-3.x-section {
-    z-index: auto;
-}
-.m73-0.x-section {
-    margin-top: 0px;
-    margin-right: 0px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    border: 0;
-    padding-right: 0px;
-    padding-left: 0px;
-}
-.x-section {
-    display: block;
-    position: relative;
-    margin: 0 0 1.5em;
-    padding: 45px 0;
-}
-.x-ttf, .x-div, .x-row, .x-col, .x-grid, .x-cell, .x-section, .x-acc-header, .x-acc-header-indicator, .x-crumbs-link, .x-paginate-inner > *, .x-anchor, .x-anchor-text-primary, .x-anchor-text-secondary, .x-anchor-sub-indicator, .x-anchor.has-int-content .x-anchor-content, .x-bar-is-sticky, .x-bar-is-sticky .x-bar-content, [data-x-toggle-collapse], .x-graphic-child, .x-image, .x-line, .x-mini-cart li, .x-mini-cart a:not(.x-anchor), .x-modal-close, .x-search, .x-search-btn, .x-search-input, .x-icon, .x-text, .x-text-content-text-primary, .x-text-content-text-subheadline, .x-text-typing, .x-typed-cursor, .x-menu-first-level, .x-menu-layered:not(.x-menu-first-level), .x-card, .x-card-faces, .x-statbar, .x-statbar-bar, .x-statbar-label, .x-wc-add-to-cart-form, .x-wc-shop-sort, [data-x-particle], .x-bar, .x-bar-scroll-button, .x-bar-container, .x-slide, .x-slide-pagination, .x-slide-pagination li {
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.x-div, .x-row, .x-col, .x-grid, .x-cell, .x-section, .x-image, .x-anchor, .x-text-headline, .x-slide {
-    transition-property: border-color, background-color, box-shadow, opacity, filter, transform;
-}
-.x-td, .x-div, .x-row, .x-col, .x-grid, .x-cell, .x-section, .x-acc-header, .x-acc-header-indicator, .x-crumbs-link, .x-paginate-inner > *, .x-anchor, .x-anchor-text-primary, .x-anchor-text-secondary, .x-anchor-sub-indicator, .x-anchor.has-int-content .x-anchor-content, .x-bar-is-sticky, .x-bar-is-sticky .x-bar-content, [data-x-toggle-collapse], .x-graphic-child, .x-image, .x-line, .x-mini-cart li, .x-mini-cart a:not(.x-anchor), .x-modal-close, .x-search, .x-search-btn, .x-search-input, .x-icon, .x-text, .x-text-content-text-primary, .x-text-content-text-subheadline, .x-text-typing, .x-typed-cursor, .x-menu-first-level, .x-menu-layered:not(.x-menu-first-level), .x-wc-add-to-cart-form, .x-wc-shop-sort, [data-x-particle], .x-bar, .x-bar-scroll-button, .x-bar-container, .x-slide, .x-slide-pagination, .x-slide-pagination li {
-    transition-duration: 300ms;
-}.x-section:before, .x-section:after {
-  content: " ";
-  display: table;
-  width: 0px;
-}
-*, *:before, *:after {
-  box-sizing: border-box;
-}
-[class*=page-template-template-blank] .entry-content {
-  margin: 0;
-}
-.entry-header, .entry-content {
-  font-size: 1rem;
-}
-.entry-content {
-  margin-top: 25px;
-}
-.editor-styles-wrapper, .entry-content {
-  counter-reset: footnotes;
-}
-.m73-k.x-row {
-  text-align: center;
-}
-.m73-a.x-row {
-  margin-right: auto;
-  margin-left: auto;
-  border: 0;
-  padding-top: 1px;
-  padding-right: 1px;
-  padding-bottom: 1px;
-  padding-left: 1px;
-  font-size: 1em;
-}
-.m73-9.x-row {
-  z-index: auto;
-}
-.x-container.max {
-  max-width: 1200px;
-}
-.x-container.width {
-  width: 88%;
-}
-.m73-l {
-  --gap: 1rem;
-}
-.x-container {
-  margin: 0 auto;
-}
-.x-ttf, .x-div, .x-row, .x-col, .x-grid, .x-cell, .x-section, .x-acc-header, .x-acc-header-indicator, .x-crumbs-link, .x-paginate-inner > *, .x-anchor, .x-anchor-text-primary, .x-anchor-text-secondary, .x-anchor-sub-indicator, .x-anchor.has-int-content .x-anchor-content, .x-bar-is-sticky, .x-bar-is-sticky .x-bar-content, [data-x-toggle-collapse], .x-graphic-child, .x-image, .x-line, .x-mini-cart li, .x-mini-cart a:not(.x-anchor), .x-modal-close, .x-search, .x-search-btn, .x-search-input, .x-icon, .x-text, .x-text-content-text-primary, .x-text-content-text-subheadline, .x-text-typing, .x-typed-cursor, .x-menu-first-level, .x-menu-layered:not(.x-menu-first-level), .x-card, .x-card-faces, .x-statbar, .x-statbar-bar, .x-statbar-label, .x-wc-add-to-cart-form, .x-wc-shop-sort, [data-x-particle], .x-bar, .x-bar-scroll-button, .x-bar-container, .x-slide, .x-slide-pagination, .x-slide-pagination li {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.x-div, .x-row, .x-col, .x-grid, .x-cell, .x-section, .x-image, .x-anchor, .x-text-headline, .x-slide {
-  transition-property: border-color, background-color, box-shadow, opacity, filter, transform;
-}
-.m73-9.x-row {
-  z-index: auto;
-}
-
-.x-container.max {
-  max-width: 1200px;
-}
-.x-container.width {
-  width: 88%;
-}
-.m73-l {
-  --gap: 1rem;
-}
-.x-container {
-  margin: 0 auto;
-}
-.m73-g > .x-row-inner {
-  justify-content: center;
-}
-.m73-d > .x-row-inner {
-  margin-right: calc(((1rem / 2) + 1px) * -1);
-  margin-left: calc(((1rem / 2) + 1px) * -1);
-}
-.m73-c > .x-row-inner {
-  margin-top: calc(((1rem / 2) + 1px) * -1);
-  margin-bottom: calc(((1rem / 2) + 1px) * -1);
-}
-.m73-a > .x-row-inner {
-  flex-direction: row;
-  align-items: stretch;
-  align-content: stretch;
-}
-.x-row-inner {
-  display: flex;
-  flex-wrap: wrap;
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: auto;
-  min-width: 0;
-  min-height: 0;
-}
-.m73-z > .x-row-inner > *:nth-child(1n - 0) {
-  flex-basis: calc(100% - clamp(0px,var(--gap),9999px));
-}
-.m73-11.x-col {
-  border: 0;
-  font-size: 1em;
-}
-.m73-10.x-col {
-  z-index: auto;
-}
-.m73-d > .x-row-inner > * {
-  margin-right: calc(1rem / 2);
-  margin-left: calc(1rem / 2);
-}
-.m73-c > .x-row-inner > * {
-  margin-top: calc(1rem / 2);
-  margin-bottom: calc(1rem / 2);
-}
-.m73-2c.x-div {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  border: 0;
-  font-size: 1em;
-}
-.m73-27.x-text {
-  font-family: inherit;
-  font-size: 1em;
-  font-weight: inherit;
-  line-height: inherit;
-  color: rgba(0,0,0,1);
-}
-.m73-1w.x-text {
-  letter-spacing: 0em;
-}
-.m73-1s.x-text {
-  border: 0;
-  font-style: normal;
-  text-transform: none;
-}
-.x-text:not(.x-text-headline) {
-  transition-property: color, border-color, background-color, box-shadow, text-shadow, column-rule, opacity, filter, transform;
-}
-.m73-1s.x-text > :first-child {
-  margin-top: 0;
-}
-p {
-  margin: 0 0 1.5em;
-}h1, .h1, h2, .h2, h3, .h3 {
-  line-height: 1.3;
-}
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, .h1 a, .h2 a, .h3 a, .h4 a, .h5 a, .h6 a, blockquote {
-  color: #272727;
-}
-h2, .h2 {
-  letter-spacing: .001em;
-}
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 395;
-}
-h2, .h2 {
-  font-size: 285.7%;
-  line-height: 1.2;
-}
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-  margin: 1.25em 0 0.2em;
-  text-rendering: optimizelegibility;
-}
-.ui-widget {
-  font-family: Arial,Helvetica,sans-serif;
-  font-size: 1em;
-}
-.ui-helper-reset {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  line-height: 1.3;
-  text-decoration: none;
-  font-size: 100%;
-  list-style: none;
-}
-.ui-accordion .ui-accordion-header {
-  display: block;
-  cursor: pointer;
-  position: relative;
-  margin: 2px 0 0 0;
-  padding: 0.5em 0.5em 0.5em 0.7em;
-  font-size: 100%;
-}
-.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr {
-  border-top-right-radius: 3px;
-}
-.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl {
-  border-top-left-radius: 3px;
-}
-.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover {
-  font-weight: normal;
-  background-color: #fff;
-}
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {
-  border: 1px solid #c5c5c5;
-  background: #f6f6f6;
-  font-weight: normal;
-  color: #454545;
-}
-.ui-icon-triangle-1-e {
-  background-position: -32px -16px;
-}
-.ui-icon, .ui-widget-content .ui-icon {
-  background-image: url('/assets/ui-icons.png');
-}
-.ui-icon {
-  width: 16px;
-  height: 16px;
-}
-.ui-icon {
-  display: inline-block;
-  vertical-align: middle;
-  margin-top: -0.25em;
-  position: relative;
-  text-indent: -99999px;
-  overflow: hidden;
-  background-repeat: no-repeat;
-}
-
-.sports_header {
-    color: #a0c51b;
-    font-size: 45px;
-    font-weight: 600;
-    margin-bottom: 39px;
-}
-
-.types_header {
-    margin-bottom: 39px;
-    font-size: 35px;
-    color: #a0c528;
-    line-height: 45px;
-    text-align: left;
-    font-weight: bold;
-}
-.type_para{
-  font-weight: 400;
-}
-.sports_para{
-  line-height: 30px;
-}
+.iframe_images{width:580px;height:295px}.managed_images{width:524px;height:507px}.button_slide{border-color:#000}@media screen and (max-width:820px){.iframe_images,.managed_images{width:100%!important;height:auto!important}.gaming_row_iframe,.sport_sol_row{display:flex;flex-direction:column}.gaming_img_iframe,.i-frame_img1,.types_images{display:none}.gaming_col_2_iframe{width:100%!important;padding:12px}.gaming_header_iframe,.header_iframes{font-size:27px!important;font-weight:600!important}.sports_col_iframe{width:100%!important;padding:12px!important}.sport_sol_col_1{width:99%!important;padding:12px}}.gaming_row_iframe,.sport_sol_row{display:flex;justify-content:center}.gaming_sec_iframe{padding-top:63PX;margin-bottom:80px}.gaming_row_iframe{gap:2%}.gaming_col_2_iframe{width:40%}.gaming_img_iframe{width:540px;height:370px}.gaming_col_iframe{width:43%}.gaming_header_iframe{font-size:35px;color:#a0c528;line-height:45px;text-align:left;margin-bottom:37px;font-weight:700}.gaming_para_iframe{font-family:Poppins;line-height:30px;font-weight:300;font-size:16px;color:#000}.sport_sol_row{gap:4%}.i-frame_img1{width:555px;height:451px}.sports_iframes{margin-top:64px;margin-bottom:64px}.sport_sol_col_1{width:45%}.header_iframes{font-size:35px;color:#a0c528;line-height:45px;text-align:left;margin-bottom:30px!important;font-family:Poppins;font-weight:600}.x-section,p{margin:0 0 1.5em}strong{font-weight:700}.sports_col_iframe{width:41%}.types_sports_sec_iframe{padding-top:11px}.m73-7.x-section{padding-top:45px;padding-bottom:45px}.m73-10.x-col,.m73-3.x-section,.m73-9.x-row{z-index:auto}.m73-0.x-section{margin:0;border:0;padding-right:0;padding-left:0}.x-section{display:block;position:relative;padding:45px 0}.x-acc-header,.x-acc-header-indicator,.x-anchor,.x-anchor-sub-indicator,.x-anchor-text-primary,.x-anchor-text-secondary,.x-anchor.has-int-content .x-anchor-content,.x-bar,.x-bar-container,.x-bar-is-sticky,.x-bar-is-sticky .x-bar-content,.x-bar-scroll-button,.x-cell,.x-col,.x-crumbs-link,.x-div,.x-graphic-child,.x-grid,.x-icon,.x-image,.x-line,.x-menu-first-level,.x-menu-layered:not(.x-menu-first-level),.x-mini-cart a:not(.x-anchor),.x-mini-cart li,.x-modal-close,.x-paginate-inner>*,.x-row,.x-search,.x-search-btn,.x-search-input,.x-section,.x-slide,.x-slide-pagination,.x-slide-pagination li,.x-td,.x-text,.x-text-content-text-primary,.x-text-content-text-subheadline,.x-text-typing,.x-typed-cursor,.x-wc-add-to-cart-form,.x-wc-shop-sort,[data-x-particle],[data-x-toggle-collapse]{transition-duration:.3s}.x-section:after,.x-section:before{content:" ";display:table;width:0}*,:after,:before{box-sizing:border-box}[class*=page-template-template-blank] .entry-content{margin:0}.entry-content,.entry-header{font-size:1rem}.entry-content{margin-top:25px}.editor-styles-wrapper,.entry-content{counter-reset:footnotes}.m73-k.x-row{text-align:center}.m73-a.x-row{margin-right:auto;margin-left:auto;border:0;padding:1px;font-size:1em}.x-acc-header,.x-acc-header-indicator,.x-anchor,.x-anchor-sub-indicator,.x-anchor-text-primary,.x-anchor-text-secondary,.x-anchor.has-int-content .x-anchor-content,.x-bar,.x-bar-container,.x-bar-is-sticky,.x-bar-is-sticky .x-bar-content,.x-bar-scroll-button,.x-card,.x-card-faces,.x-cell,.x-col,.x-crumbs-link,.x-div,.x-graphic-child,.x-grid,.x-icon,.x-image,.x-line,.x-menu-first-level,.x-menu-layered:not(.x-menu-first-level),.x-mini-cart a:not(.x-anchor),.x-mini-cart li,.x-modal-close,.x-paginate-inner>*,.x-row,.x-search,.x-search-btn,.x-search-input,.x-section,.x-slide,.x-slide-pagination,.x-slide-pagination li,.x-statbar,.x-statbar-bar,.x-statbar-label,.x-text,.x-text-content-text-primary,.x-text-content-text-subheadline,.x-text-typing,.x-ttf,.x-typed-cursor,.x-wc-add-to-cart-form,.x-wc-shop-sort,[data-x-particle],[data-x-toggle-collapse]{transition-timing-function:cubic-bezier(0.4,0,0.2,1)}.x-anchor,.x-cell,.x-col,.x-div,.x-grid,.x-image,.x-row,.x-section,.x-slide,.x-text-headline{transition-property:border-color,background-color,box-shadow,opacity,filter,transform}.x-container.max{max-width:1200px}.x-container.width{width:88%}.m73-l{--gap:1rem}.x-container{margin:0 auto}.m73-g>.x-row-inner{justify-content:center}.m73-d>.x-row-inner{margin-right:calc(((1rem / 2) + 1px) * -1);margin-left:calc(((1rem / 2) + 1px) * -1)}.m73-c>.x-row-inner{margin-top:calc(((1rem / 2) + 1px) * -1);margin-bottom:calc(((1rem / 2) + 1px) * -1)}.m73-a>.x-row-inner{flex-direction:row;align-items:stretch;align-content:stretch}.x-row-inner{display:flex;flex-wrap:wrap;flex-grow:1;flex-shrink:1;flex-basis:auto;min-width:0;min-height:0}.m73-z>.x-row-inner>:nth-child(1n-0){flex-basis:calc(100% - clamp(0px,var(--gap),9999px))}.m73-11.x-col{border:0;font-size:1em}.m73-d>.x-row-inner>*{margin-right:calc(1rem / 2);margin-left:calc(1rem / 2)}.m73-c>.x-row-inner>*{margin-top:calc(1rem / 2);margin-bottom:calc(1rem / 2)}.m73-2c.x-div{flex-grow:0;flex-shrink:1;flex-basis:auto;border:0;font-size:1em}.m73-27.x-text{font-family:inherit;font-size:1em;font-weight:inherit;line-height:inherit;color:#000}.m73-1w.x-text{letter-spacing:0}.m73-1s.x-text{border:0;font-style:normal;text-transform:none}.x-text:not(.x-text-headline){transition-property:color,border-color,background-color,box-shadow,text-shadow,column-rule,opacity,filter,transform}.m73-1s.x-text>:first-child{margin-top:0}.h1,.h2,.h3,h1,h2,h3{line-height:1.3}.h1,.h1 a,.h2,.h2 a,.h3,.h3 a,.h4,.h4 a,.h5,.h5 a,.h6,.h6 a,blockquote,h1,h1 a,h2,h2 a,h3,h3 a,h4,h4 a,h5,h5 a,h6,h6 a{color:#272727}.h2,h2{letter-spacing:.001em;font-size:285.7%;line-height:1.2}.h1,.h2,.h3,.h4,.h5,.h6,h1,h2,h3,h4,h5,h6{font-family:Poppins;font-style:normal;font-weight:395;margin:1.25em 0 .2em;text-rendering:optimizelegibility}.ui-widget{font-family:Arial,Helvetica,sans-serif;font-size:1em}.ui-helper-reset{margin:0;padding:0;border:0;outline:0;line-height:1.3;text-decoration:none;font-size:100%;list-style:none}.ui-accordion .ui-accordion-header{display:block;cursor:pointer;position:relative;margin:2px 0 0;padding:.5em .5em .5em .7em;font-size:100%}.ui-corner-all,.ui-corner-right,.ui-corner-top,.ui-corner-tr{border-top-right-radius:3px}.ui-corner-all,.ui-corner-left,.ui-corner-tl,.ui-corner-top{border-top-left-radius:3px}.ui-button.ui-state-active:hover,.ui-button:active,.ui-state-active,.ui-widget-content .ui-state-active,.ui-widget-header .ui-state-active,a.ui-button:active{font-weight:400;background-color:#fff}.ui-button,.ui-state-default,.ui-widget-content .ui-state-default,.ui-widget-header .ui-state-default,html .ui-button.ui-state-disabled:active,html .ui-button.ui-state-disabled:hover{border:1px solid #c5c5c5;background:#f6f6f6;font-weight:400;color:#454545}.ui-icon-triangle-1-e{background-position:-32px -16px}.ui-icon,.ui-widget-content .ui-icon{background-image:url('/assets/ui-icons.png')}.ui-icon{width:16px;height:16px;display:inline-block;vertical-align:middle;margin-top:-.25em;position:relative;text-indent:-99999px;overflow:hidden;background-repeat:no-repeat}.sports_header{color:#a0c51b;font-size:45px;font-weight:600;margin-bottom:39px}.types_header{margin-bottom:39px;font-size:35px;color:#a0c528;line-height:45px;text-align:left;font-weight:700}.type_para{font-weight:400}.sports_para{line-height:30px}
