--- a/src/app/online-casino-software/online-casino-software.component.css
+++ b/src/app/online-casino-software/online-casino-software.component.css
@@ -1,233 +1,1 @@
-.container_imgs{
-width: 853px;
-}
-.main_feater{
-    width: 252px;
-    height: 375px; 
-}
-.integration_images{
-    width: 638px;
-    height: 371px;
-}
-.online-casino-button{
-background-color: #a0c528;
-}
-.online-casino-button:hover{
-   color: white;
-   background-color: #a0c528;
-}
-.online-casino_col p{
-        font-family: Poppins;
-        line-height: 30px;
-        font-weight: 395;
-        color: #000;
-        font-size: 16px;
-}
-.online-casino_col p strong{
-        font-weight: bold;
-        color: black;
-    }
-    .online-casino_col h3{
-        font-family: 'Poppins';
-        line-height: 20px;
-        font-weight: 700;
-        font-size: 22px;
-    }
-.online-casino-youtube img{
-transition: all .4s ease-in-out 0s;
-      }
-.online-casino-youtube img:hover {
-            -webkit-transform: scale(1.08);
-            transform: scale(1.08);
-}
-.col1-para{
-            font-family: Poppins;
-    line-height: 30px;
-    font-weight: 395;
-    color: #000;
-    font-size: 16px;
- }
-.col1-para strong{
-            font-weight: bold;
-
-}
-.wpb_wrapper {
-           font-family: 'Poppins'!important; 
-}
-        .faq-container{
-            padding-left: 200px;
-            padding-right: 82px;
-        }
-
-        .white_casino_1{
-width: 700px;
-height: 700px;
-        }
-
-@media screen and (max-width: 820px){
-    .container_imgs{
-        width: 100%;
-        height: auto;
-        }
-
-.online-casino-button:hover {
-    color: white;
-}
-.online-casino_para{
-    font-family: 'Poppins' !important;
-    line-height: 30px;
-    font-weight: 395;
-    color: #686868;
-    font-size: 16px
-
-}
-.vc_custom_1673977594688 {
-    margin-top: 50px !important;
-    margin-bottom: 40px !important;
-}
-.white_casino_1{
-    width: 100% !important;
-    height: auto ;
-}
-}
-.containt{
-    width: 1233px;
-    justify-content: center;
-    margin: 0 auto;
-
-}
-@media (max-width: 1200px){
-.containt {
-    width: 1170px;
-}
-}
-@media (max-width: 992px){
-.containt {
-    width: 970px;
-}
-}
-@media (max-width: 768px){
-.containt {
-    width: 750px;
-}
-}
-.vc_row {
-    margin-left: -15px;
-    margin-right: -15px;
-}
-ol, ul {
-    padding-left: 30px;
-    font-size: 16px;
-    color: #686868;
-    line-height: 30px;
-    font-weight: 395;
-}
-strong{
-    font-weight: bold;
-}
-@media (max-width: 768px){
-    .online-casino_header {
-        margin-top: 87px;
-        margin-bottom: 17px;
-        font-size: 33px;
-        line-height: normal;
-    
-    }
-    .content{
-    box-sizing: border-box;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-  .online-casino-button{
-    margin-left: 0px;
-    justify-content: center;
-    margin: 0 auto;
-    display: flex;
-    gap: 7px;
-  }
-  .container2{
-    margin-top: 48px;
-  }
-  .col1-para{
-    font-size: 19px;
-  }
-  .casino_whites_sec_p,.clasico_f,.container5-col2 p{
-     font-size: 19px; 
-     margin-bottom: 0px;
-     font-weight: 395;
-  }
-  .container5-col2 h1 {
-    font-size: 22px;
-    margin-bottom: 20px;
-  }
-  .container5-col2 p{
-    line-height: 1.5;
-  }
-  .faq-container{
-    padding-left: 0px;
-    padding-right: 0px;
- 
-}
-.faq-col1 p,.faq-col1 h1,.faq-col1 h3,.faq-col1 li{
-    text-align: initial;
-    list-style: disc;
-
-}
-}
-.youtube_img:hover {
-        transform: scale(1.1);
-        transition: all 400ms ease-in-out 0s !important;
-        -ms-transformtransition: all 400ms ease-in-out 0s;
-        -webkit-transformtransition: all 400ms ease-in-out 0s;
-}
-.youtube_img {
-        transform: scale(1.0);
-        transition: all 400ms ease-in-out 0s !important;
-        -ms-transformtransition: all 400ms ease-in-out 0s;
-        -webkit-transformtransition: all 400ms ease-in-out 0s;
-       
-    }
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px){
-    .online-casino_col {
-        padding: 126px 2px 40px 76px;
-    }
-    .container5-row {
-        display: flex;
-        justify-content: center;
-        padding-left: 94px;
-        padding-right: 39px;
-    }  
-    .col2-text {
-        padding: 0px;
-        margin-left: 0px;
-        width: 50%;
-    }
-}
-.container2-col1 p,.casino_whites_sec_p{
-    font-size: 16px;
-}
-.online-casino-button{
-    padding: 15px 20px;
-    font-size: 14px;
-}
-.fa-solid{
-    margin-right: 5px;
-}
-.casino_whites_sec_p{
-    font-family: Poppins;
-}
-ol, li{
-    color: #000000;
-}
-.container5-col2 h1{
-    font-size: 30px;
-}
-.online-casino-link p:hover{
-    color: #000 !important;
-}
-.casino_whites_sec_p span{
-cursor: pointer;
-}
-.casino_whites_sec_p span:hover{
-    color: #000 !important;
-    }
+.youtube_img,.youtube_img:hover{transition:.4s ease-in-out!important;-ms-transformtransition:all 400ms ease-in-out 0s;-webkit-transformtransition:all 400ms ease-in-out 0s}.container_imgs{width:853px}.main_feater{width:252px;height:375px}.integration_images{width:638px;height:371px}.online-casino-button:hover{color:#fff;background-color:#a0c528}.col1-para,.online-casino_col p{font-family:Poppins;line-height:30px;font-weight:395;color:#000;font-size:16px}.online-casino_col p strong{font-weight:700;color:#000}.online-casino_col h3{font-family:Poppins;line-height:20px;font-weight:700;font-size:22px}.online-casino-youtube img{transition:.4s ease-in-out}.online-casino-youtube img:hover{-webkit-transform:scale(1.08);transform:scale(1.08)}.col1-para strong,strong{font-weight:700}.wpb_wrapper{font-family:Poppins!important}.faq-container{padding-left:200px;padding-right:82px}.white_casino_1{width:700px;height:700px}@media screen and (max-width:820px){.container_imgs{width:100%;height:auto}.online-casino-button:hover{color:#fff}.online-casino_para{font-family:Poppins!important;line-height:30px;font-weight:395;color:#686868;font-size:16px}.vc_custom_1673977594688{margin-top:50px!important;margin-bottom:40px!important}.white_casino_1{width:100%!important;height:auto}}.containt{width:1233px;justify-content:center;margin:0 auto}@media (max-width:1200px){.containt{width:1170px}}@media (max-width:992px){.containt{width:970px}}.vc_row{margin-left:-15px;margin-right:-15px}ol,ul{padding-left:30px;font-size:16px;color:#686868;line-height:30px;font-weight:395}@media (max-width:768px){.containt{width:750px}.online-casino_header{margin-top:87px;margin-bottom:17px;font-size:33px;line-height:normal}.content{box-sizing:border-box;padding-left:15px;padding-right:15px}.online-casino-button{justify-content:center;margin:0 auto;display:flex;gap:7px}.container2{margin-top:48px}.col1-para{font-size:19px}.casino_whites_sec_p,.clasico_f,.container5-col2 p{font-size:19px;margin-bottom:0;font-weight:395}.container5-col2 h1{font-size:22px;margin-bottom:20px}.container5-col2 p{line-height:1.5}.faq-container{padding-left:0;padding-right:0}.faq-col1 h1,.faq-col1 h3,.faq-col1 li,.faq-col1 p{text-align:initial;list-style:disc}}.youtube_img:hover{transform:scale(1.1)}.youtube_img{transform:scale(1)}@media only screen and (min-device-width:768px) and (max-device-width:1024px){.online-casino_col{padding:126px 2px 40px 76px}.container5-row{display:flex;justify-content:center;padding-left:94px;padding-right:39px}.col2-text{padding:0;margin-left:0;width:50%}}.casino_whites_sec_p,.container2-col1 p{font-size:16px}.online-casino-button{background-color:#a0c528;padding:15px 20px;font-size:14px}.fa-solid{margin-right:5px}.casino_whites_sec_p{font-family:Poppins}li,ol{color:#000}.container5-col2 h1{font-size:30px}.casino_whites_sec_p span:hover,.online-casino-link p:hover{color:#000!important}.casino_whites_sec_p span{cursor:pointer}
