--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -10,7 +10,7 @@
         <div class="contact_details">
           <div class="row_col" style="cursor: pointer">
             <a href="skype:live:9960f32f776599a2?chat">
-              <img src="assets/Skype_logo.webp" alt="skype" />
+              <img src="assets/Skype_logo.webp" alt="skype"  width="140" height="63"/>
             </a>
           </div>
           <div class="row_col_1">
@@ -26,6 +26,7 @@
                 class="whats_img"
                 src="assets/Whatsapp.webp"
                 alt="whatsapp"
+                width="60" height="60"
               />
         
           </div>
