--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -38,10 +38,10 @@
       </button>
     </div>
     <div class="platform_col_2">
-      <img class="platform_img" src="assets/vrnl_img_up.webp" width="544" height="310"
-        alt="Sport Betting Software">
+      <img class="platform_img lazy-load-image" data-src="assets/vrnl_img_up.webp" width="544" height="310"
+        alt="Sport Betting Software" >
       <div class="platform_you_tube">
-        <a href="#" aria-label="youtube link"><img class="you_img" src="assets/play.png.webp" width="520" height="291" alt="youtube" /></a>
+        <a href="#" aria-label="youtube link"><img class="you_img lazy-load-image" data-src="assets/play.png.webp" width="520" height="291" alt="youtube" /></a>
       </div>
     </div>
   </div>
@@ -71,7 +71,7 @@
       <div class="white_back"></div>
     </div>
     <div class="whites_col_1">
-      <img class="whites_sec_img2" src="assets/vrnl image 6_11zon.webp" width="543" height="317"
+      <img class="whites_sec_img2 lazy-load-image" data-src="assets/vrnl image 6_11zon.webp" width="543" height="317"
         alt="White Label Solutions" />
     </div>
   </div>
@@ -80,7 +80,7 @@
 <section class="gaming_sec">
   <div class="gaming_row">
     <div class="gaming_col">
-      <img class="gaming_img" src="assets/vrnl igaming_11zon.webp" width="520" height="325" alt="iGaming Platform" />
+      <img class="gaming_img lazy-load-image" data-src="assets/vrnl igaming_11zon.webp" width="520" height="325" alt="iGaming Platform" />
     </div>
     <div class="gaming_col_2">
       <h2 class="gaming_header">iGaming Platform</h2>
