--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -1,7 +1,7 @@
 
 <header class="header">
   
-    <img class="images_logo" src="assets/VRNL new LOGO copy.webp" routerLink="/" alt="logo">
+    <img class="images_logo" src="assets/VRNL new LOGO copy.webp" routerLink="/" alt="logo" width="106px" height="45px">
 
 
   <nav class="navbar">
