--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -4,7 +4,7 @@
       <div class="hader_row">
         <img
           class="images_logo"
-          src="assets/VRNL new LOGO copy.webp"
+          src="assets/VRNL new LOGO copy.webp" width="106px" height="45px"
           routerLink="/"
           alt="logo"
         />
@@ -56,7 +56,7 @@
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" aria-label="logo"
-        ><img src="assets/VRNL new LOGO copy.webp" alt="logo"
+        ><img src="assets/VRNL new LOGO copy.webp" alt="logo" width="106px" height="45px"
       /></a>
       <button
         class="navbar-toggler"
