--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -40,9 +40,9 @@
     <div class="platform_col_2">
       <img class="platform_img" src="assets/vrnl_img_up.webp" width="544" height="310"
         alt="Sport Betting Software">
-      <div class="platform_you_tube">
+      <!-- <div class="platform_you_tube">
         <a href="#" aria-label="youtube link"><img class="you_img" src="assets/play.png.webp" width="520" height="291" alt="youtube" /></a>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
@@ -71,7 +71,7 @@
       <div class="white_back"></div>
     </div>
     <div class="whites_col_1">
-      <img class="whites_sec_img2" src="assets/vrnl image 6_11zon.webp" width="543" height="317"
+      <img class="whites_sec_img2" src="assets/Sports Betting Softwares1.png" width="543" height="317"
         alt="White Label Solutions" />
     </div>
   </div>
