--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -211,7 +211,7 @@
       <div class="white_back"></div>
     </div>
     <div class="integration_col_1">
-      <img class="virtual_img" src="assets/Virtual Games.webp" alt="virtual games provider">
+      <img class="virtual_img" src="assets/Virtual Games Image1.png" alt="virtual games provider">
     </div>
   </div>
 </section>
