--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -15,7 +15,7 @@
 <section class="platform_sec">
   <div class="platform_row">
     <div class="platform_col">
-      <h2 class="platform_header">Sport Betting Software Solutions</h2>
+      <h2 class="platform_header gradient-text"><a href="https://vrnlexch.com/" target="_blank">Sport Betting Software Solutions</a></h2>
 
       <p class="platform_para">
         Sport Betting software solutions have redefined the sports betting experience. Their user-friendly interface, advanced analytics, and live betting options make them a go-to choice for both novice and experienced bettors. With the convenience and excitement they bring, it's no wonder that these solutions are revolutionizing the industry.      </p>
@@ -38,7 +38,7 @@
       </button>
     </div>
     <div class="platform_col_2">
-      <img class="platform_img" src="assets/vrnl_img_up.webp" width="544" height="310"
+      <img class="platform_img" src="assets/sportsbetting2.png" width="544" height="500"
         alt="Sport Betting Software">
       <!-- <div class="platform_you_tube">
         <a href="#" aria-label="youtube link"><img class="you_img" src="assets/play.png.webp" width="520" height="291" alt="youtube" /></a>
@@ -166,7 +166,7 @@
 <section class="integration_sec">
   <div class="integration_row">
     <div class="integration_col">
-      <img src="assets/vrnl 12.webp" title="integration_platforms" width="545" height="315"
+      <img src="assets/api-iframe.png" title="integration_platforms" width="545" height="500"
         alt="Integration with other platforms" />
     </div>
     <div class="integration_col_1">
